@@ -27,6 +27,7 @@ Other features
  * EmbedBlock now validates against recognised embed providers on save (Bertrand Bordage)
  * Made cache control headers on Wagtail admin consistent with Django admin (Tomasz Knapik)
  * Notification emails now include an "Auto-Submitted: auto-generated" header (Dan Braghis)
+ * Image chooser panels now show alt text as title (Samir Shah)
 
 
 Bug fixes
